Adding a handler for sending test emails and sending attached images by mail
